[M143][ntp-realbox] Resolve misalignment of the contextual entrypoint.
After the glyph animations were introduced, there was some misalignment
of the contextual entrypoint between the composebox and realbox. This
ensure all css changes that were introduced are flag guarded by
ntp-next-features-enabled

(cherry picked from commit 67d9cbe4e0743d877598d560e3c0ade2b20263d9)

Before: https://screencast.googleplex.com/cast/NDY4MTkzMTY1OTY3MzYwMHw5ZDcwNjg2Zi02MQ
After: https://screencast.googleplex.com/cast/NTY0OTU0MjY0Mzk3NDE0NHwzNjBmMGEwNy1jZQ
Bug: 462107869
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7169448
Auto-Submit: Hannah Collins <hannahrogers@google.com>
Commit-Queue: Riley Tatum <rtatum@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1546923}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7172194
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Hannah Collins <hannahrogers@google.com>
Cr-Commit-Position: refs/branch-heads/7499@{#2370}
Cr-Branched-From: b30439823e5177773584139e72e0593e36863899-refs/heads/main@{#1536371}

--- a/ui/webui/resources/cr_components/composebox/context_menu_entrypoint.css
+++ b/ui/webui/resources/cr_components/composebox/context_menu_entrypoint.css
@@ -38,10 +38,6 @@
   width: var(--button-height);
 }
 
-.glow-container.tall {
-  margin-left: 4px;
-}
-
 cr-button#entrypoint.ai-mode-button {
   width: max-content;
 }
@@ -188,7 +184,7 @@ cr-button#entrypoint.ai-mode-button {
   --cr-hover-background-color:
       var(--color-composebox-context-entrypoint-hover-background);
   --cr-icon-button-margin-start: 6px;
-  --icon-block-padding-small: 8px;
+  --icon-block-padding-small: 10px;
   border: initial;
   gap: 4px;
 }
@@ -196,6 +192,7 @@ cr-button#entrypoint.ai-mode-button {
 :host([ntp-next-features-enabled]) #entrypoint {
   --cr-hover-background-color: transparent;
   animation: hover-background-delay 0ms 1850ms linear forwards;
+  --icon-block-padding-small: 8px;
 }
 
 #entrypoint:not([disabled]) {
