--- a/ui/webui/resources/cr_components/searchbox/searchbox.css
+++ b/ui/webui/resources/cr_components/searchbox/searchbox.css
@@ -398,8 +398,13 @@ search-animated-glow {
 
 :host([ntp-realbox-next-enabled]) contextual-entrypoint-and-carousel::part(context-menu-entrypoint-icon) {
   --cr-icon-button-icon-size: 24px;
-  --cr-icon-button-margin-start: 0px;
+  --cr-icon-button-margin-start: 2px;
   --cr-icon-button-size: 36px;
+}
+
+:host([ntp-realbox-next-enabled][ntp-next-features-enabled]) contextual-entrypoint-and-carousel::part(context-menu-entrypoint-icon) {
+  /* Account for the margin of the glow container */
+  --cr-icon-button-margin-start: 0px;
 }
 
 :host([ntp-realbox-next-enabled][searchbox-layout-mode^='Tall']) contextual-entrypoint-and-carousel::part(context-menu-entrypoint-icon) {
